# excel2tulipa

./: .gitignore  README.md  pyproject.toml
etc/: reader_spec.toml
excel2tulipa/: __main__.py  config.py  transform.py
